--- a/ukesoppgaver1/src/main/resources/static/index.html
+++ b/ukesoppgaver1/src/main/resources/static/index.html
@@ -73,6 +73,60 @@
     <h2>Oppgave 10</h2>
     <button onclick="nrOfClicksWithString()">Click me!</button>
 </section>
+<br>
+<br>
+<h2>Frida prøver selv ... :D</h2>
+
+<section>
+    <h2>Oppgave 1</h2>
+    <button onclick="hey()">Click for message</button>
+</section>
+
+<section>
+    <h2>Oppgave 2</h2>
+<!-- jeg lager en knapp som skal kalle en funksjon når den trykkes på-->
+    <button onclick="importantWelcomeMessage()">Click for pop up message</button>
+</section>
+
+<section>
+    <h2>Oppgave 3</h2>
+    <input onchange = "pageWithInput(this.value)">
+</section>
+
+<section>
+    <h2>Oppgave 4</h2>
+    <input onchange = "alertWithInput(this.value)">
+</section>
+
+<section>
+    <h2>Oppgave 5</h2>
+    <input onchange = "consoleWithInput(this.value)">
+</section>
+
+<section>
+    <h2>Oppgave 6</h2>
+    <input onchange = "newPageColor(this.value)">
+</section>
+
+<section>
+    <h2>Oppgave 7</h2>
+    <input onchange = "makeTextUpper(this.value)">
+</section>
+
+<section>
+    <h2>Oppgave 8</h2>
+    <button onclick="one()">Click me!</button>
+</section>
+
+<section>
+    <h2>Oppgave 9</h2>
+    <button onclick="numberOfClicks()">click me a lot!</button>
+</section>
+
+<section>
+    <h2>Oppgave 10</h2>
+    <button onclick="numberOfClicksWithMessage()">click me a lot also!</button>
+</section>
 
 </body>
 </html>
