--- a/ukesoppgaver2/src/main/resources/static/index.html
+++ b/ukesoppgaver2/src/main/resources/static/index.html
@@ -6,8 +6,10 @@
     <script>
 
     </script>
+    <script src="array.js"></script>
 </head>
 <body>
-
+    <button onclick="visPersonRegister()">Click for register</button>
+    <div id="personRegister"></div>
 </body>
 </html>
